Use github-markdown-css

--- a/3.html
+++ b/3.html
@@ -1,4 +1,13 @@
-<h1>teste</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>foo</title>
+  <link rel="stylesheet" href="github-markdown-css">
+</head>
+<body>
+<h1 id="teste">teste</h1>
 <p>lalal</p>
-<h2>teste</h2>
+<h2 id="teste">teste</h2>
 <p>asdf</p>
+</body>
+</html>
