--- a/exercicio_2.html
+++ b/exercicio_2.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Exercício 2</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>Exercicio_2</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -15744,7 +15744,8 @@ File for type *poison* and gender *female* created successfully with ID: 1U2kNGA
 <span class="sd">&quot;&quot;&quot;</span>
 
 <span class="n">credentials_dict</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="nb">open</span><span class="p">(</span><span class="n">credentials_json</span><span class="p">))</span>
-<span class="n">gc</span><span class="p">,</span> <span class="n">authorized_user</span> <span class="o">=</span> <span class="n">gspread</span><span class="o">.</span><span class="n">oauth_from_dict</span><span class="p">(</span><span class="n">credentials_dict</span><span class="p">)</span>
+<span class="k">with</span> <span class="n">io</span><span class="o">.</span><span class="n">capture_output</span><span class="p">()</span> <span class="k">as</span> <span class="n">captured</span><span class="p">:</span>
+    <span class="n">gc</span><span class="p">,</span> <span class="n">authorized_user</span> <span class="o">=</span> <span class="n">gspread</span><span class="o">.</span><span class="n">oauth_from_dict</span><span class="p">(</span><span class="n">credentials_dict</span><span class="p">)</span>
 
 <span class="n">sh</span> <span class="o">=</span> <span class="n">gc</span><span class="o">.</span><span class="n">create</span><span class="p">(</span><span class="s2">&quot;[GREENPEACE] Resumo&quot;</span><span class="p">)</span>
 
