--- a/exercicio_3.html
+++ b/exercicio_3.html
@@ -5,9 +5,21 @@
   <link rel="stylesheet" href="github-markdown-css">
 </head>
 <body>
-<h1 id="teste">teste</h1>
-<p>lalal</p>
-<h2 id="teste">teste</h2>
-<p>asdf</p>
+<h1 id="exerc-cio-3">Exercício 3</h1>
+<h2 id="quest-o-1">Questão 1</h2>
+<blockquote>
+<p>Cada analista da equipe de Inteligência de Dados tem um perfil próprio e temos uma conta genérica para conseguir lidar com bases de dados coletivas. No cenário em que o usuário gp_user gostaria de ter acesso para a tabela press_data, qual seria o código para disponibilizá-la?</p>
+</blockquote>
+<p>Resposta 1</p>
+<h2 id="quest-o-2">Questão 2</h2>
+<blockquote>
+<p>Em algumas vezes, mesmo após dar permissão uma vez, a tabela é reescrita com o parâmetro drop e perde as permissões. Qual o código que deve ser feito para que a tabela sempre herde os privilégios de forma padrão?</p>
+</blockquote>
+<p>Resposta 2</p>
+<h2 id="quest-o-3">Questão 3</h2>
+<blockquote>
+<p>Em um cenário que alguém não é mais responsável por uma tabela específica, qual o código para mudar a pessoa proprietária dessa tabela?</p>
+</blockquote>
+<p>Resposta 3</p>
 </body>
 </html>
