--- a/exercicio_3.html
+++ b/exercicio_3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Exercício 3</title>
-  <link rel="stylesheet" href="github-markdown-css">
+  <link rel="stylesheet" href="github-markdown.css">
 </head>
 <body>
 <h1 id="exerc-cio-3">Exercício 3</h1>
