--- a/exercicio_3.html
+++ b/exercicio_3.html
@@ -2,24 +2,38 @@
 <html>
 <head>
   <title>Exercício 3</title>
-  <link rel="stylesheet" href="github-markdown.css">
 </head>
 <body>
 <h1 id="exerc-cio-3">Exercício 3</h1>
 <h2 id="quest-o-1">Questão 1</h2>
+<p>Cada analista da equipe de Inteligência de Dados tem um perfil próprio e temos uma conta genérica para conseguir lidar com bases de dados coletivas. No cenário em que o usuário <strong>gp_user</strong> gostaria de ter acesso para a tabela <strong>press_data</strong>, qual seria o código para disponibilizá-la?</p>
 <blockquote>
-<p>Cada analista da equipe de Inteligência de Dados tem um perfil próprio e temos uma conta genérica para conseguir lidar com bases de dados coletivas. No cenário em que o usuário gp_user gostaria de ter acesso para a tabela press_data, qual seria o código para disponibilizá-la?</p>
+<p>Para conceder acesso irrestrito ao usuário <strong>gp_user</strong> para a tabela <strong>press_data</strong>, basta executar o seguinte código:</p>
 </blockquote>
-<p>Resposta 1</p>
+<pre><code class="lang-sql">GRANT ALL PRIVILEGES ON TABLE press_data TO gp_user;
+</code></pre>
+<blockquote>
+<p>Reference: <a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_GRANT.html">GRANT</a></p>
+</blockquote>
 <h2 id="quest-o-2">Questão 2</h2>
+<p>Em algumas vezes, mesmo após dar permissão uma vez, a tabela é reescrita com o parâmetro <strong>drop</strong> e perde as permissões. Qual o código que deve ser feito para que a tabela sempre herde os privilégios de forma padrão?</p>
 <blockquote>
-<p>Em algumas vezes, mesmo após dar permissão uma vez, a tabela é reescrita com o parâmetro drop e perde as permissões. Qual o código que deve ser feito para que a tabela sempre herde os privilégios de forma padrão?</p>
+<p>Para que a tabela sempre herde os privilégios de forma padrão, basta executar o seguinte código:</p>
 </blockquote>
-<p>Resposta 2</p>
+<pre><code class="lang-sql">ALTER DEFAULT PRIVILEGES IN SCHEMA &lt;schema_name&gt; GRANT ALL ON TABLES TO gp_user;
+</code></pre>
+<blockquote>
+<p>Reference <a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_ALTER_DEFAULT_PRIVILEGES.html">ALTER DEFAULT PRIVILEGES</a></p>
+</blockquote>
 <h2 id="quest-o-3">Questão 3</h2>
-<blockquote>
 <p>Em um cenário que alguém não é mais responsável por uma tabela específica, qual o código para mudar a pessoa proprietária dessa tabela?</p>
+<blockquote>
+<p>Para mudar a pessoa proprietária de uma tabela, basta executar o seguinte código:</p>
 </blockquote>
-<p>Resposta 3</p>
+<pre><code class="lang-sql">ALTER TABLE &lt;table_name&gt; OWNER TO &lt;new_owner&gt;;
+</code></pre>
+<blockquote>
+<p>Reference: <a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_ALTER_TABLE.html">ALTER TABLE</a></p>
+</blockquote>
 </body>
 </html>
