Run make gen -- 2

--- a/exercicio_3.html
+++ b/exercicio_3.html
@@ -15,7 +15,7 @@
 </code></pre>
 </blockquote>
 <blockquote>
-<p><strong>Reference</strong>: <a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_GRANT.html">[GRANT]</a></p>
+<p><strong>Reference</strong>: [<a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_GRANT.html">GRANT</a>]</p>
 </blockquote>
 <h2 id="quest-o-2">Questão 2</h2>
 <p>Em algumas vezes, mesmo após dar permissão uma vez, a tabela é reescrita com o parâmetro <strong>drop</strong> e perde as permissões. Qual o código que deve ser feito para que a tabela sempre herde os privilégios de forma padrão?</p>
@@ -27,7 +27,7 @@
 </code></pre>
 </blockquote>
 <blockquote>
-<p><strong>Reference</strong> <a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_ALTER_DEFAULT_PRIVILEGES.html">[ALTER DEFAULT PRIVILEGES]</a></p>
+<p><strong>Reference</strong>: [<a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_ALTER_DEFAULT_PRIVILEGES.html">ALTER DEFAULT PRIVILEGES</a>]</p>
 </blockquote>
 <h2 id="quest-o-3">Questão 3</h2>
 <p>Em um cenário que alguém não é mais responsável por uma tabela específica, qual o código para mudar a pessoa proprietária dessa tabela?</p>
@@ -39,7 +39,7 @@
 </code></pre>
 </blockquote>
 <blockquote>
-<p><strong>Reference</strong>: <a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_ALTER_TABLE.html">[ALTER TABLE]</a></p>
+<p><strong>Reference</strong>: [<a href="https://docs.aws.amazon.com/pt_br/redshift/latest/dg/r_ALTER_TABLE.html">ALTER TABLE</a>]</p>
 </blockquote>
 </body>
 </html>
