Fix typo in Exercicio_1.ipynb

--- a/exercicio_1.html
+++ b/exercicio_1.html
@@ -15133,7 +15133,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">Exercício 1 - Tarefa_2 - Item_1</span>
+<span class="sd">Exercício 1 - Tarefa 2 - Item 1</span>
 
 <span class="sd">Qual o tipo de reação mais reportado na tabela? Lembre-se que uma linha pode ter</span>
 <span class="sd">mais de uma reação separada por “;”.</span>
@@ -15184,7 +15184,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">Exercício 1 - Tarefa_2 - Item_2</span>
+<span class="sd">Exercício 1 - Tarefa 2 - Item 2</span>
 
 <span class="sd">Qual o nome da indústria que tem mais mortes reportadas?</span>
 <span class="sd">&quot;&quot;&quot;</span>
@@ -15234,7 +15234,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">Exercício 1 - Tarefa_2 - Item_3</span>
+<span class="sd">Exercício 1 - Tarefa 2 - Item 3</span>
 
 <span class="sd">Quais as 3 principais reações adversas de pessoas entre 18-25 anos na indústria de</span>
 <span class="sd">cosméticos?</span>
